fix control container bottom margin, preventing parent container from overflowing correctly, replace with padding

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -53,6 +53,8 @@
 
   .control-container {
     margin: $app-main-footer-padding;
+    margin-bottom: 0;
+    padding-bottom: $app-main-footer-padding;
   }
 
   .prompt-list {
